Fixed display container alignment issue

--- a/06-advanced-front-end-projects/tic-tac-toe/css/main.css
+++ b/06-advanced-front-end-projects/tic-tac-toe/css/main.css
@@ -10,11 +10,10 @@ noscript {
    text-align: center;
 }
 .no-js #game-container { display: none; }
-h1 {
-   height:2rem;
-   line-height:2rem;
-   font-size:2em;
-   margin:0.5rem 0
+.h1{
+   text-align:center;
+   font-size:2rem;
+   font-weight:400
 }
 .h2 { font-weight: normal; }
 ul {
